# GraphicsRenderer

./: .clang-format  .gitignore  .gitmodules  CMakeLists.txt
Assets/Material/Primitive/: DefaultMaterial.json
Assets/Shader/: TextureMix.frag
Assets/Shader/ForwardLightBase/: ForwardDefaultPixel.frag  ForwardDefaultVertex.vert
Assets/Shader/ForwardUnlit/: ForwardUnlit.frag  ForwardUnlit.vert
CppProject/: .gitignore  CMakeLists.txt
CppProject/Assets/Material/: DefaultMaterial.json  TextureMixtureMat.json  TriangleMat.json
CppProject/Assets/Shader/: BasePixelShader.frag  BaseVertexShader.vert  ForwardDefaultPixel.frag  ForwardDefaultPixel.frag.spv  ForwardDefaultVertex.vert  ForwardDefaultVertex.vert.spv  TextureMix.frag
CppProject/Src/: WinMain.cpp
CppProject/Src/Application/: AppLooper.h  Application.cpp  Application.h
CppProject/Src/Camera/: OrthoCamera.cpp
CppProject/Src/Define/: Define.h  Math.h  RendererApi.cpp  RendererApi.h
CppProject/Src/Editor/: Editor.cpp  Editor.h  EditorLooper.cpp  EditorLooper.h
CppProject/Src/Input/: KeyCode.h  Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
CppProject/Src/Looper/: EditorLooper.cpp  EditorLooper.h  RenderLooper.h  TestLooper.cpp  TestLooper.h  TestLooperData.h
CppProject/Src/Math/: CameraFrustum.cpp  CameraFrustum.h  Math.cpp  Math.h
CppProject/Src/Renderer/: RenderLooper.cpp  RenderLooper.h  Renderer.cpp  Renderer.h  RendererCommand.h
CppProject/Src/Scene/: IRendererObject.h  RendererObject.cpp  RendererObject.h  RendererObject.hpp  Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
CppProject/Src/Time/: Time.cpp  Time.h
CppProject/Src/Util/: NonConstructible.h
PyTools/: .gitignore  enum_config.json  enum_helper_gen.py  enum_helper_gen_config.json  enum_helper_generator.py  shader_gen.py  shader_gen_config.json
PyTools/EnumHelperGenerator/: EnumConfig.json
PyTools/codegen/: code_generator.py  enum_gen_config.py
PyTools/shader_compile/: dxc.py  glslc.py  shader.py  spirv_cross.py  util.py
Resource/: resource.rc
Scripts/: assets_copy.py  enum_helper_gen.py  enum_helper_gen_config.json  shader_gen.py
Scripts/codegen/: function_gen_config.py
Scripts/shader_compile/: glslc.py  spirv_cross.py
Scripts/tools/codegen/: code_generator.py
Scripts/tools/miscs/: path_miscs.py
Scripts/tools/shader_compile/: dxc.py  spirv_cross.py
Shader/: BasePixelShader.frag
Src/: WinMain.cpp
Src/Application/: AppLooper.h  Application.cpp  Application.h
Src/Application/ApplicationWinImp/: ApplicationWinImp.cpp  ApplicationWinImp.h  ApplicationWinImpKeyCode.cpp  ApplicationWinImpMessage.cpp  ApplicationWinImpWindow.cpp
Src/Application/Event/: AppEvent.cpp
Src/Define/: Define.h  RendererApi.cpp  RendererApi.h  WindowsPlatform.h
Src/Editor/: Editor.cpp  Editor.h
Src/Editor/Backend/: EditorBackend.h
Src/Helper/: Timer.h
Src/Helper/WinApi/: WinApiWindow.h
Src/Input/: Keyboard.cpp  Keyboard.h  Mouse.cpp  Mouse.h
Src/Input/Keyboard/: Keyboard.h
Src/Input/Mouse/: Mouse.cpp
Src/Looper/: TestLooper.cpp  TestLooper.h
Src/Math/: Math.cpp  Math.h
Src/Renderer/: Renderer.cpp  RendererCommand.cpp  RendererCommand.h
Src/Renderer/Assets/: AssetsPool.hpp  Image.h  Mesh.cpp  Mesh.h  Model.cpp
Src/Renderer/Buffer/: BufferFactory.cpp  BufferFactory.h  BufferLayout.cpp  IndexBuffer.cpp  IndexBuffer.h  InputLayout.cpp  InputLayout.h  InputLayoutElement.cpp  UniformBlock.cpp  UniformBlock.h  UniformBuffer.cpp  UniformBuffer.h  UniformBufferFactory.cpp  UniformBufferFactory.h  UniformDefine.h  VertexArray.cpp  VertexBuffer.cpp  VertexBuffer.h
Src/Renderer/Camera/: Camera.cpp  OrthoCamera.cpp
Src/Renderer/InputAssemble/: InputAssemble.cpp  InputAssemble.h  InputLayout.cpp  InputLayoutElement.cpp
Src/Renderer/Material/: Material.cpp  Material.h
Src/Renderer/Pipeline/: RendererPipeline.cpp  RendererPipeline.h  RendererPipelineType.cpp  RendererPipelineType.h
Src/Renderer/RenderCommand/: RenderCommand.cpp  RenderCommand.h  RenderCommandImpl.cpp  RenderCommandImpl.h
Src/Renderer/Shader/: PixelShader.cpp  PixelShader.h  Shader.cpp  Shader.h  ShaderDataType.cpp  ShaderDataType.h  ShaderProgram.h  ShaderType.cpp  ShaderType.h  VertexShader.cpp  VertexShader.h
Src/Renderer/Texture/: TexturePool.cpp  TexturePool.h
Src/Scene/: Scene.cpp  Scene.h  SceneObject.cpp  SceneObject.h
Src/Time/: Time.h
Src/Util/: NonCopyable.h  StringUtil.hpp  Timer.hpp  Util.hpp
(+247 files in other folders)
